Fixed iframe sizing issue on smaller screens.

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -289,7 +289,7 @@ footer {
 	}
 
 	iframe{
-		width: 500px;
-		height: 500px;
+		width: 100%;
+		aspect-ratio: 16 / 9;
 	}
 }
